NINE-559 changing mobile menu

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -132,7 +132,8 @@
     "responsibleGaming" : "Zodpovědné hraní",
     "risk" : "Varování o riziku",
     "tournaments" : "Turnaje",
-    "dailyCashback" : "Programu cashback"
+    "dailyCashback" : "Programu cashback",
+    "search": "Vyhledávání"
   },
   "gameCategories" : {
     "top" : "Nejlepší hry",
