--- a/locales/de.json
+++ b/locales/de.json
@@ -136,7 +136,8 @@
     "responsibleGaming": "Verantwortungsbewusst Spielen",
     "risk": "Risikowarnungen",
     "tournaments": "Turniere",
-    "dailyCashback": "Tägliche rückzahlung"
+    "dailyCashback": "Tägliche rückzahlung",
+    "search": "Suche"
   },
   "gameCategories": {
     "top": "Top-Spiele ",
