--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -136,7 +136,8 @@
     "responsibleGaming": "Jeu responsable",
     "risk": "Avertissements sur les risques",
     "tournaments": "Tournois",
-    "dailyCashback": "Remise quotidienne"
+    "dailyCashback": "Remise quotidienne",
+    "search": "Rechercher"
   },
   "gameCategories": {
     "top": "Les meilleurs jeux",
