--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -136,7 +136,8 @@
     "responsibleGaming": "Responsible Gaming",
     "risk": "Risk warnings",
     "tournaments": "Tournaments",
-    "dailyCashback": "Daily cashback"
+    "dailyCashback": "Daily cashback",
+    "search": "Search"
   },
   "gameCategories": {
     "top": "Top games",
