NINE-562 updated info in d&w slots and live

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -428,7 +428,7 @@
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Slots",
       "name": "Drops & Wins Slots",
-      "text": "Vítejte v nové 6. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen! Proto jsou tentokrát do týdnů 21-24 týdenních turnajů a denních výher zahrnuty některé nové hry!"
+      "text": "Vítejte v nové 6. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen! Hraní s násobitelem je mnohem zábavnější. Proto jsou tentokrát do týdnů 21–24 týdenních turnajů (týdny s násobitelem výhry) a denních výher (týdny s násobitelem výhry) zahrnuty některé nové hry!"
     },
     "dropsWinsLive": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins",
@@ -512,7 +512,7 @@
   "dropsWinsSlots": {
     "title": "Aktualizovaná edice Drops & Wins Slots",
     "prize": "4 000 000 eur",
-    "text": "Vítejte v nové 6. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen! Proto jsou tentokrát do týdnů 21-24 týdenních turnajů a denních výher zahrnuty některé nové hry!",
+    "text": "Vítejte v nové 6. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur! Rovněž zvyšuje počet měsíčních peněžitých cen a nabízí větší šance na výhru. Zúčastněte se vzrušující Drops & Wins a získejte příležitost vyhrát část z neuvěřitelných 4 000 000 eur v některé z cen! Hraní s násobitelem je mnohem zábavnější. Proto jsou tentokrát do týdnů 21–24 týdenních turnajů (týdny s násobitelem výhry) a denních výher (týdny s násobitelem výhry) zahrnuty některé nové hry!",
     "textMobile": "Vítejte v nové 6. fázi pro akce Daily Drops & Wins. Pragmatic Play se rozhodl zdvojnásobit měsíční sumu slotové edice Drops and Wins na 500 000 eur!",
     "terms": [
       {
@@ -529,7 +529,11 @@
       },
       {
         "title": "Jak vyhrát",
-        "text": "● Minimální požadovaná sázka činí 0,50 eura.<br/>● Aby se hráči mohli zapojit, musí hrát se skutečnými penězi a provést požadovanou sázku v jakékoliv ze zahrnutých her.<br/>● V týdenních turnajích – nejvyšší výhra za jeden spin upravená podle výše sázky.<br/>● V denních turnajích – jakýkoliv spin za skutečné peníze v zapojených hrách může vyvolat náhodnou cenu.<br/>● Hráčům nevznikají žádné další výdaje související s účastí."
+        "text": "● Nejvyšší částka výhry za jeden spin pravená pro výši sázky.<br/>● Každý spin za skutečné peníze v zapojených hrách může přinést náhodnou cenu v hotovosti.<br/>● Hráči musí hrát se skutečnými penězi v kterékoliv ze zapojených her BEZ požadavku na minimální sázku. Hráči nevznikají žádné další náklady spojené s účastí."
+      },
+      {
+        "title": "Dodatečně",
+        "text": "● Hráči, kteří se turnaje zúčastní ve více týdnech, mohou vyhrát ceny v podobě násobku r z vsazené částky vítězného hráče, jak je stanoveno v Tabulce výher týdenního turnaje (týdny pro násobení výhry) – a v Tabulce výher denního turnaje Prize Drop (týdny pro násobení výhry) (dále jako „Týdny pro násobení výhry“.<br/>● Přesáhne-li vítězný spin hodnotu deseti eur (10 €), výhra bude vyplacena na základě sázky ve výši deseti eur (10 €) nebo odpovídající částky v dostupné měně (viz definice níže) X získaný násobek.<br/>● Pořadí ve výsledkové tabulce odpovídá skóre, které je dané nejvyšší vyhranou částkou v jednom spinu a libovolné zahrnuté hře, upravenou podle výše vkladu.<br/>● Pokud by týdenní turnaj dokončili dva (2) nebo více hráčů se stejným umístěním ve výsledkové tabulce, pak hráč, který skóre dosáhne první, dostane nejvyšší výhru."
       }
     ]
   },
