NINE-542 added partners in countries and changed bonus policy to bonus terms

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -127,7 +127,7 @@
     "btc" : "O BTC",
     "aml" : "AML politika",
     "terms" : "Pravidla a podmínky",
-    "bonusPolicy" : "Bonusová politika",
+    "bonusPolicy" : "Bonusové podmínky",
     "privacyPolicy" : "Zásady ochrany osobních údajů",
     "responsibleGaming" : "Zodpovědné hraní",
     "risk" : "Varování o riziku",
