--- a/locales/de.json
+++ b/locales/de.json
@@ -131,7 +131,7 @@
     "btc": "Über BTC",
     "aml": "Anti-geldwähler-Politik",
     "terms": "Geschäftsbedingungen",
-    "bonusPolicy": "Bonusrichtlinien ",
+    "bonusPolicy": "Bonusbedingungen",
     "privacyPolicy": "Datenschutz-Bestimmungen",
     "responsibleGaming": "Verantwortungsbewusst Spielen",
     "risk": "Risikowarnungen",
