--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -131,7 +131,7 @@
     "btc": "À propos de BTC",
     "aml": "Politique AML",
     "terms": "Termes et conditions",
-    "bonusPolicy": "Politique de bonus",
+    "bonusPolicy": "Conditions de bonus",
     "privacyPolicy": "Politique de confidentialité",
     "responsibleGaming": "Jeu responsable",
     "risk": "Avertissements sur les risques",
