--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -131,7 +131,7 @@
     "btc": "About BTC",
     "aml": "AML policy",
     "terms": "Terms and conditions",
-    "bonusPolicy": "Bonus policy",
+    "bonusPolicy": "Bonus terms",
     "privacyPolicy": "Privacy policy",
     "responsibleGaming": "Responsible Gaming",
     "risk": "Risk warnings",
