--- a/locales/en.json
+++ b/locales/en.json
@@ -447,50 +447,6 @@
     "games": "Games in this tournament",
     "terms": "Tournament terms and conditions"
   },
-  "playsonMay": {
-    "prize": "€ 60 000",
-    "text": "Welcome another month and another CashDays 60k tournamentby the well-known provider. Playson knows how to treat its beloved players. The prize pool of 60,000 EUR is waiting for their winners.<br/>The tournament runs between 0:01 UTC on the 1st of May 2021 and 8th of May 2021 until 23:59 UTC.",
-    "textMobile": "Welcome another month and another CashDays 60k tournamentby the well-known provider.",
-    "terms": [
-      {
-        "text": "The tournament runs between 0:01 UTC on the 1st of May 2021 and 8th of May 2021 until 23:59 UTC."
-      },
-      {
-        "text": "There are 10 participating games:<br/>●  Book of Gold: Double Chance<br/>●  Book of Gold: Multichance<br/>●  Buffalo Power: Hold and Win<br/>●  Burning Wins: classic 5 lines<br/>●  Diamond Wins: Hold and Win<br/>●  Divine Dragon: Hold and Win<br/>●  Legend of Cleopatra MegawaysTM<br/>●  Solar Queen<br/>●  Solar Temple<br/>●  Wolf Power: Hold and Win"
-      },
-      {
-        "text": "Points are calculated round-by-round, with each 1 EUR (or currency equivalent) won equaling 10 points."
-      },
-      {
-        "text": "The minimum bet required to qualify is 0.50 EUR."
-      },
-      {
-        "text": "The munificent prize pool of 60,000 EUR will be shared between 350 lucky players."
-      },
-      {
-        "text": "The more points you earn, the higher your chances of winning are."
-      }
-    ]
-  },
-  "mayMadness": {
-    "prize": "€ 60 000",
-    "text": "Again the well-known Spinomenal will drive you nuts with the exciting May Madness tournament. During the three weeks in May, you can enjoy its cool slots and tear a piece of the lavish prize pool of 60,000 EUR!<br/><br/>Let’s start with Round III! It runs between May 25, 2021, 00:00 GMT, and June 1, 2021, 23:59 GMT.",
-    "textMobile": "Again the well-known Spinomenal will drive you nuts with the exciting May Madness tournament. During the three weeks in May, you can enjoy its cool slots and tear a piece of the lavish prize pool of 60,000 EUR!",
-    "terms": [
-      {
-        "text": "Round III runs between between May 25, 2021, 00:00 GMT, and June 1, 2021, 23:59 GMT."
-      },
-      {
-        "text": "Participating games in Round III:<br/><br/>●  Book Of Rebirth<br/>●  Origins Of Lilith<br/>●  4 Horsemen II"
-      },
-      {
-        "text": "The minimum qualifying bet per spin to participate in the tournament is 0.5 EUR."
-      },
-      {
-        "text": "Each win rewards you with a score based on the win multiplier. The more points you collect, the higher your position on the leaderboard."
-      }
-    ]
-  },
   "knockoutFootball": {
     "title": "Let’s play<br/> with Habanero <br/>Round 2!",
     "prize": "EUR 30,000",
@@ -576,6 +532,38 @@
       {
         "title": "Additionally:",
         "text": "<strong>How to win:<br/><br/>Weekly Roulette Tournament<br/>Prizes:</strong> €50,000 in total across 1,000 prizes:<br/>Players need to choose to play with real money in any of the participating games with a minimum bet requirement of €0,50 during the promo period. There is no additional cost for players to participate.<br/><br/>A player must receive a minimum of 2 Consecutive Qualifying Wins, where each Consecutive Qualifying Win is greater than 2x of the total Qualifying Bet to qualify for the Weekly Roulette Tournament.<br/><br/>A Player may increase their Weekly Roulette Tournament score upon every additional Consecutive Qualifying Win.<br/><br/>Any stakes placed on 1:1 odds bets (Red/Black, Odd/Even, 1:18/19:36) shall not be counted towards the Weekly Roulette Tournament score.<br/><br/><strong>Weekly Blackjack Tournament<br/>Prizes:</strong> €25,000 in total across 300 prizes:<br/>Players need to choose to play with real money in any of the participating games with a minimum bet requirement of €10 during the promo period. There is no additional cost for players to participate.<br/><br/>A player must receive a minimum of 2 Consecutive Qualifying Wins, where each Consecutive Qualifying Win is greater than 1x of the total Qualifying Bet to qualify for the Weekly Blackjack Tournament.<br/><br/>A Player may increase their Weekly Blackjack Tournament score upon every additional Consecutive Qualifying Win.<br/><br/>Only Main Bets and/or Bets Behind may be considered for the Weekly Blackjack Tournament.<br/><br/><strong>Weekly Mega Wheel Tournament<br/>Prizes:</strong> €25,000 in total across 600 prizes:<br/>Players need to choose to play with real money in any of the participating games with a minimum bet requirement of €0.5 during the promo period. There is no additional cost for players to participate.<br/><br/>A player must receive a minimum of 2 Consecutive Qualifying Wins, where each Consecutive Qualifying Win is greater than 1x of the total Qualifying Bet to qualify for the Weekly Mega Wheel Tournament.<br/><br/>A Player may increase their Weekly Mega Wheel Tournament score upon every additional Consecutive Qualifying Win.<br/><br/>All Qualifying Bets may be considered for the Weekly Mega Wheel Tournament.<br/><br/><strong>Weekly Baccarat Tournaments<br/>Prizes:</strong> €25,000 in total across 600 prizes:<br/>Players need to choose to play with real money in any of the participating games with a minimum bet requirement of €0.5 during the promo period. There is no additional cost for players to participate.<br/><br/>A player must receive a minimum of 2 Consecutive Qualifying Wins, where each Consecutive Qualifying Win is greater than 1x of the total Qualifying Bet to qualify for the Weekly Baccarat Tournament.<br/><br/>A Player may increase their Weekly Baccarat Tournament score upon every additional Consecutive Qualifying Win.<br/><br/>Only Main Bets (Player, Banker, and Tie) may be considered for the Weekly Baccarat Tournament score."
+      }
+    ]
+  },
+  "rtt": {
+    "title": "The Ninecasino Weekly Derby",
+    "prize": "€2,500",
+    "text": "Running for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC. Grab your chance to share a podium worthy prize pool of €2,500 with 40 lucky riders.",
+    "textMobile": "Running for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC. Grab your chance to share a podium worthy prize pool of €2,500 with 40 lucky riders.",
+    "terms": [
+      {
+        "text": "It runs for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC."
+      },
+      {
+        "text": "The prize fund is €2,500. The prizes must be played through x5 (wager x5)."
+      },
+      {
+        "text": "If a player places bets in a currency other than euro, the prizes will be issued in the currency in which the player made the most of the bets."
+      },
+      {
+        "text": "Players with at least one deposit will participate in the tournament. For each real money bet of €1 the player will receive 1 tournament point."
+      },
+      {
+        "text": "The minimum bet to start participating is €0.5."
+      },
+      {
+        "text": "Only bets in slots will be taken into account; no bets in board games and games with dealers will be taken into account."
+      },
+      {
+        "text": "The winner will be determined by the number of tournament points: the more tournament points the player has, the closer the player is to victory. Prizes will be awarded automatically at the end of the tournament."
+      },
+      {
+        "text": "General Bonus Terms and Conditions must be observed."
       }
     ]
   },
