NINE-567 added derby promotion

--- a/locales/en.json
+++ b/locales/en.json
@@ -441,6 +441,11 @@
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Live",
       "name": "Drops & Wins Live",
       "text": "Pragmatic Play gives you more and more opportunities to entertain yourself with the next level with its new Drops and Wins for Live Casino. Grab the chance to win a share of the impressive €3,000,000 in cash prizes!<br/><br/>Do you like Live games? This Live edition suits you for sure. Take part in the Weekly Tournaments - Roulette, Blackjack, Mega Wheel, Baccarat!"
+    },
+    "rtt": {
+      "upTo": "up to $2500",
+      "name": "The Ninecasino Weekly Derby",
+      "text": "Running for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC. Grab your chance to share a podium worthy prize pool of €2,500 with 40 lucky riders."
     }
   },
   "tournaments": {
@@ -536,7 +541,7 @@
     ]
   },
   "rtt": {
-    "title": "The Ninecasino Weekly Derby",
+    "title": "The Ninecasino<br/> Weekly Derby",
     "prize": "€2,500",
     "text": "Running for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC. Grab your chance to share a podium worthy prize pool of €2,500 with 40 lucky riders.",
     "textMobile": "Running for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC. Grab your chance to share a podium worthy prize pool of €2,500 with 40 lucky riders.",
