NINE-567 added new translations

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -179,7 +179,8 @@
     "week": "Semaine",
     "name": "Název",
     "points":  "Směřovat",
-    "prize": "cena"
+    "prize": "cena",
+    "prizePool": "Prize pool"
   },
   "actions" : {
     "addCurrency" : "Add currency"
