--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -182,7 +182,8 @@
     "week": "Semaine",
     "name": "Nom",
     "points": "Points",
-    "prize": "Prix"
+    "prize": "Prix",
+    "prizePool": "Une cagnotte"
   },
   "actions": {
     "addCurrency": "Ajouter une devise"
